# paddleocr-rust-cli

./: Cargo.toml  README.md  test_out.json
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/workflows/: release.yml
release-pkg/: README.md
src/: main.rs
